# raasoa

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: launch.json
alembic/: env.py
alembic/versions/: 19dc365e7974_merge_heads.py  3a8758ffa2b0_initial_schema_with_foreign_keys.py  58c55af7f18d_add_performance_indexes.py  596e6539af2a_add_claims_table.py  a1b2c3d4e5f6_add_retrieval_feedback_and_synthesis.py  b2c3d4e5f6a7_add_knowledge_index.py  c3d4e5f6a7b8_add_temporal_claims_and_source_filter.py  d4e5f6a7b8c9_add_audit_retention_queue.py  e5f6a7b8c9d0_add_performance_indices_v2.py  f6a7b8c9d0e1_add_chunk_location_fields.py  g7a8b9c0d1e2_add_gin_prefilter_indexes.py  g7b8c9d0e1f2_add_usage_metering_quotas_keys.py  h8a9b0c1d2e3_add_doc_metadata_jsonb.py  i9b0c1d2e3f4_add_outcome_to_feedback.py  j0c1d2e3f4a5_add_retention_audit_queue_cols.py  k1d2e3f4a5b6_add_content_snapshot_to_versions.py
client/: README.md  pyproject.toml
client/src/raasoa_client/: __init__.py  cli.py  client.py  models.py
docs/: rag-service-konzept.md
eval/: gold_set_example.json
examples/: bulk_ingest.py  claude_desktop_config.json  fastapi_integration.py  quickstart.py
src/raasoa/: config.py  db.py  main.py  telemetry.py
src/raasoa/api/: acl.py  analytics.py  claim_clusters.py  dependencies.py  documents.py  health.py  ingestion.py  keys.py  metrics.py  quality.py  retrieval.py  source_tree.py  sources.py  synthesis.py  tenants.py  versioning.py  webhooks.py
src/raasoa/connectors/: notion.py
src/raasoa/dashboard/: routes.py
src/raasoa/eval/: metrics.py  runner.py
src/raasoa/ingestion/: chunker.py  hasher.py  (+4 more)
tests/: conftest.py
tests/test_api/: test_auth.py  test_documents.py  test_health.py  test_sources_connectors.py
tests/test_eval/: test_metrics.py
tests/test_ingestion/: test_chunker.py  test_frontmatter.py  test_hasher.py  test_parser.py  test_tiering.py  test_validation.py
tests/test_integration/: test_pipeline_logic.py
tests/test_mcp/: test_server.py
tests/test_middleware/: test_auth.py  test_metering.py  test_rate_limit.py
tests/test_providers/: test_cache.py  test_factory.py
tests/test_quality/: test_checks.py  test_schema_checks.py  test_scorer.py
tests/test_retrieval/: test_confidence.py  test_knowledge_index.py  test_query_router.py  test_reranker.py  test_structured.py
tests/test_telemetry/: test_tracing.py
(+64 files in other folders)
