[project]
name = "raasoa-client"
version = "0.1.0"
description = "Python client for RAASOA — Knowledge Reliability Layer"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
raasoa = "raasoa_client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raasoa_client"]
